# Udacity-Embedded_systems_profisional

./: README.md
Payment Application/Application/: app.c  app.h
Payment Application/Card/: card.c  card.h  tempCodeRunnerFile.c
Payment Application/Server/: server.c  server.h
Payment Application/Terminal/: terminal.c  terminal.h
PaymentApplication/: CMakeLists.txt  app.c  app.h  card.c  main.c  main.h  server.c  server.h  terminal.c  terminal.h
PaymentApplication/Application/: app.c  app.h
PaymentApplication/Card/: card.c  card.h
PaymentApplication/Server/: server.c  server.h
PaymentApplication/Terminal/: terminal.c  terminal.h
Traficlight/: CMakeLists.txt  main.c  main.h
Traficlight/Application/: app.c  app.h
Traficlight/Document/: sequence diagram.drawio  trafic light project doc.docx
Traficlight/HAL/: LED.c  LED.h
Traficlight/HAL/led/: LED.h
Traficlight/MCAL/: GPIO.c  GPIO.h  INT.c  INT.h  TIMER.c
Traficlight/MCAL/gpio/: GPIO.h
Traficlight/MCAL/timer/: TIMER.c  TIMER.h
Traficlight/Simulation/: Backup Of New Project.traficlight.pdsbak  Last Loaded New Project.traficlight.pdsbak  New Project.traficlight.pdsprj  New Project.traficlight.pdsprj.PERSEVERANCE.Mohamed Mehery.workspace
Traficlight/Simulation app test/: Backup Of New Project.traficlight.pdsbak  Last Loaded New Project.traficlight.pdsbak  New Project.traficlight.pdsprj  New Project.traficlight.pdsprj.PERSEVERANCE.Mohamed Mehery.workspace  build - Shortcut.lnk
Traficlight/Simulation testing HAL drivers/: New Project.traficlight.pdsprj.PERSEVERANCE.Mohamed Mehery.workspace
